# HabitRPG

./: CMakeLists.txt  CMakePresets.json  README.md  habitrpg.sqlite3  imgui.ini  main.py  spin_sequence.py
agents/: ARTIST_AGENT.md  DESIGNER_AGENT.md  ENGINEER_AGENT.md
assets/ui/runtime/: asset_map_v2.json  asset_map_v3.json  raster_map_v1.json
assets/ui/themes/: theme_paper_console_high_contrast_v1.json  theme_paper_console_v2.json  theme_runtime_loader_bundle_v1.json  theme_signal_garden_high_contrast_v1.json  theme_signal_garden_v2.json
docs/: ARCHITECT_RESEARCH_AND_PLAN.md  ARTIST_ACCESSIBILITY_REPORT_V3.md  ARTIST_ASSET_INVENTORY.md  ARTIST_IMGUI_THEME_HANDOFF.md  ARTIST_MOTION_POLICY_V3.md  ARTIST_ROUND2_INTEGRATION_QA.md  ARTIST_RUNTIME_ASSET_MAP.md  ARTIST_VISUAL_SYSTEM.md  DESIGNER_COPY_PACK_V1.md  DESIGNER_ROUND1_UX_SPEC.md  DESIGNER_ROUND2_IMPLEMENTATION_PACKAGE.md  DESIGNER_ROUND3_ONBOARDING_AND_INSIGHTS_SPEC.md  ENGINEER_CONTRACTS.md  ENGINEER_LIMITATIONS.md
include/habitrpg/app/: app_state.hpp  application.hpp
include/habitrpg/data/: migrations.hpp  repositories.hpp  sqlite_repository.hpp
include/habitrpg/domain/: contracts.hpp  entities.hpp  interaction_flow.hpp  reward_engine.hpp  today_queue.hpp
include/habitrpg/ui/: contracts.hpp  dockspace_shell.hpp  runtime_resources.hpp
scripts/: fetch_imgui.sh
src/: main.cpp
src/app/: application.cpp  startup_smoke.cpp
src/data/: migrations.cpp  sqlite_repository.cpp
src/domain/: entities.cpp  interaction_flow.cpp  reward_engine.cpp  today_queue.cpp
src/ui/: dockspace_shell.cpp  runtime_resources.cpp
tests/: migration_tests.cpp  queue_tests.cpp  round3_tests.cpp  roundtrip_tests.cpp  smoke_tests.cpp  state_transition_tests.cpp  test_main.cpp
